# Ticket-System-2025

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clear-all-data.sh
docs/: acquirement.md  bonus.md  overall-design-document.md
src/: main.cpp
src/command/: command_system.cpp  command_system.hpp  order_command.cpp  order_command.hpp  system_command.cpp  system_command.hpp  train_command.cpp  train_command.hpp  user_command.cpp  user_command.hpp
src/controller/: order_manager.cpp  order_manager.hpp  seat_manager.cpp  seat_manager.hpp  train_manager.cpp  train_manager.hpp  user_manager.cpp  user_manager.hpp
src/model/: order.hpp  seat.hpp  station.hpp  ticket.hpp  time.hpp  train.hpp  user.hpp
src/stl/: exceptions.hpp  hash_map.hpp  list.hpp  map.hpp  priority_queue.hpp  utility.hpp  vector.hpp
src/storage/: bplus_tree.cpp  bplus_tree.hpp  cache.hpp  index_block.hpp  memory_river.hpp
src/utilities/: hash.hpp  limited_sized_string.hpp  merge_sort.hpp  parse_by_char.hpp
src/web/: main.cpp  server.cpp  server.hpp
src/web/static/: index.html
web-frontend/: .env.example  DEPLOYMENT.md  README.md  app.js  check-project.sh  ecosystem.config.js  package.json  start-enhanced.sh  start.sh  test-backend-protocol.js  test-clean.js  test-start.sh
web-frontend/config/: app.js  database.js
web-frontend/controllers/: ticketController.js
web-frontend/middleware/: auth.js  error.js  validation.js
web-frontend/public/css/: style.css
web-frontend/public/js/: admin.js  admin.js.backup  app.js  login.js  register.js  search.js
web-frontend/routes/: admin.js  order.js  ticket.js  train.js  user.js
web-frontend/utils/: logger.js  notificationSystem.js  systemMonitor.js
web-frontend/views/: admin.ejs  error.ejs  index.ejs  layout.ejs  login.ejs  orders.ejs  profile.ejs  register.ejs  search.ejs
web-frontend/views/partials/: buy-ticket-modal.ejs  footer.ejs  navbar.ejs
